@@ -1,0 +1,286 @@
+/* XPM */
+static char *dummy[]={
+"64 64 219 2",
+"Qt c #000000",
+".P c #010101",
+".z c #020202",
+"#o c #030303",
+".O c #040404",
+"aa c #050505",
+".8 c #060606",
+".7 c #070707",
+"a# c #080808",
+"ae c #090909",
+".h c #0a0000",
+"#C c #0a0a0a",
+"az c #0b0b0b",
+"#0 c #0c0c0c",
+"#A c #0d0d0d",
+"aR c #0e0e0e",
+"#K c #0f0f0f",
+"#B c #101010",
+".A c #111111",
+"#9 c #121212",
+"a. c #131313",
+"ad c #141414",
+"br c #151515",
+"aO c #161616",
+"af c #171717",
+".c c #181818",
+"aF c #191919",
+"ah c #1a1a1a",
+".Q c #1b1b1b",
+"#L c #1c1c1c",
+".a c #1d1d1d",
+"bn c #1e1e1e",
+"#5 c #1f1f1f",
+".f c #201818",
+"ab c #212121",
+"by c #232323",
+"b# c #242424",
+"bh c #252525",
+"aV c #262626",
+"aT c #272727",
+".b c #292929",
+"b. c #2c2c2c",
+"bp c #2f2f2f",
+"#8 c #313131",
+"aG c #323232",
+"aJ c #373737",
+"bg c #383838",
+"aA c #393939",
+"#Z c #3b3b3b",
+"#T c #3c3c3c",
+".i c #3f3f3f",
+"bd c #404040",
+"#1 c #414141",
+".y c #444444",
+".x c #454545",
+".N c #464646",
+"a4 c #474747",
+"a9 c #484848",
+".9 c #494949",
+"#n c #4a4a4a",
+"bx c #4b4b4b",
+"be c #4c4c4c",
+"#g c #4e4e4e",
+"#4 c #505050",
+"aQ c #515151",
+"bv c #525252",
+".6 c #535353",
+".j c #555555",
+"ai c #565656",
+".B c #575757",
+"ak c #5c5c5c",
+"#7 c #5d5d5d",
+"ba c #5e5e5e",
+"am c #5f5f5f",
+"#S c #616161",
+"#z c #626262",
+"aN c #636363",
+"aI c #676767",
+"bo c #686868",
+"aW c #696969",
+"an c #6b6b6b",
+"#p c #6c6c6c",
+"#I c #6d6d6d",
+".R c #6e6e6e",
+"#J c #6f6f6f",
+"aP c #717171",
+"a1 c #737373",
+"bu c #747474",
+"a5 c #757575",
+"#W c #777777",
+"ay c #787878",
+"aH c #797979",
+"bf c #7a7a7a",
+"aX c #7b7b7b",
+"a3 c #7c7c7c",
+"## c #7d7d7d",
+"ac c #7e7e7e",
+".5 c #7f7f7f",
+"bi c #808080",
+"#2 c #818181",
+"#h c #828282",
+".t c #838383",
+"bt c #848484",
+"#f c #858585",
+"aY c #868686",
+"#D c #878787",
+"#a c #888888",
+"a2 c #898989",
+"bk c #8a8a8a",
+"al c #8b8b8b",
+"#3 c #8c8c8c",
+"#m c #8d8d8d",
+"aM c #8e8e8e",
+"aB c #8f8f8f",
+"ap c #909090",
+".T c #919191",
+"aK c #929292",
+"aU c #939393",
+"bc c #949494",
+"#. c #959595",
+"a7 c #969696",
+"aE c #979797",
+"aj c #989898",
+".U c #999999",
+"bj c #9a9a9a",
+"av c #9b9b9b",
+".M c #9c9c9c",
+".4 c #9d9d9d",
+"ax c #9e9e9e",
+"aS c #9f9f9f",
+"bm c #a0a0a0",
+"#t c #a1a1a1",
+"as c #a2a2a2",
+"#l c #a3a3a3",
+"a6 c #a4a4a4",
+"ao c #a5a5a5",
+".w c #a6a6a6",
+"#Y c #a7a7a7",
+"#Q c #a8a8a8",
+"aw c #a9a9a9",
+".S c #aaaaaa",
+"#U c #ababab",
+".k c #acacac",
+"#y c #adadad",
+".s c #aeaeae",
+"bs c #afafaf",
+".p c #b0b0b0",
+"bw c #b1b1b1",
+".q c #b2b2b2",
+"#H c #b3b3b3",
+".L c #b4b4b4",
+"#v c #b5b5b5",
+"#X c #b6b6b6",
+"#E c #b7b7b7",
+".D c #b8b8b8",
+"#q c #b9b9b9",
+".C c #bababa",
+"bq c #bbbbbb",
+"#w c #bcbcbc",
+"#F c #bdbdbd",
+"#x c #bebebe",
+"#R c #bfbfbf",
+"#r c #c0c0c0",
+".V c #c1c1c1",
+"au c #c2c2c2",
+"#P c #c3c3c3",
+".E c #c4c4c4",
+"#k c #c5c5c5",
+"at c #c6c6c6",
+"#M c #c7c7c7",
+"#G c #c8c8c8",
+".K c #c9c9c9",
+"#b c #cacaca",
+"bb c #cbcbcb",
+"ar c #cccccc",
+".W c #cdcdcd",
+"aC c #cecece",
+".3 c #cfcfcf",
+".v c #d0d0d0",
+".J c #d1d1d1",
+"#d c #d2d2d2",
+".o c #d3d3d3",
+"a0 c #d4d4d4",
+".r c #d5d5d5",
+".l c #d6d6d6",
+".F c #d7d7d7",
+"#O c #d8d8d8",
+"#s c #d9d9d9",
+".u c #dadada",
+".H c #dbdbdb",
+".n c #dcdcdc",
+".Y c #dddddd",
+"#V c #dedede",
+".m c #dfdfdf",
+"#N c #e0e0e0",
+".G c #e1e1e1",
+"#u c #e2e2e2",
+".X c #e3e3e3",
+"#c c #e4e4e4",
+".2 c #e5e5e5",
+".1 c #e6e6e6",
+".0 c #e7e7e7",
+".I c #e8e8e8",
+"aq c #e9e9e9",
+"#i c #eaeaea",
+"#j c #ebebeb",
+".Z c #ececec",
+"aD c #ededed",
+"#6 c #eeeeee",
+"ag c #efefef",
+"#e c #f0f0f0",
+"aL c #f1f1f1",
+"a8 c #f2f2f2",
+"aZ c #f4f4f4",
+"bl c #f5f5f5",
+".e c #f71818",
+".g c #fe0000",
+".d c #ff0000",
+".# c #ffffff",
+"QtQtQtQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQt.#.aQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQt.#.bQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQt.#.bQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+".#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#",
+".c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.d.e.e.e.e.e.d.d.d.d.d.f.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c.c",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.d.d.d.d.d.d.g.g.g.g.g.hQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+".#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#.#",
+".i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.i.j.k.l.m.n.o.p.q.r.s.t.u.n.m.v.w.j.i.i.i.i.i.i.x.y.i.i.i.i.i.i.i.i.i.i.i.i.i.i",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.zQtQtQtQt.A.B.C.D.E.l.F.G.H.I.u.J.I.n.K.L.M.N.OQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.PQtQtQtQt.Q.R.S.T.U.V.W.X.Y.Z.0.1.2.3.4.5.5.6.7QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.8.9#.###a#b#c.q#d#e.0.m.Y.K.t#f#f.iQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.z.z#g.L#h.M.V#i.E.1.1.v.S#j#k#l#m.q#n.zQtQtQt#oQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.zQtQtQt.z#p#.#q#r#s#j#t#u#b#v#w#u.n#x#y.S#zQtQtQtQt#AQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#B.OQtQt#C#m#D#E#F.u.2#G.0.m.m.1.J.F#v#H#I#J.8QtQtQt#AQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#o#K.PQtQt#L#I#F###M#d.Z.1#N#O.C.K.Z#k#P#Q#R#S#oQtQtQt#oQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.z.zQtQtQtQtQtQtQtQtQtQt.z.7QtQtQt#K#T#U.L.I#V.2.o#w#W#R#X.0.H#j.p#Y#ZQtQtQtQtQtQt.O#oQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.7.7QtQtQtQtQtQtQtQt.P.8QtQtQtQtQt.P#0#1#2.H#f#3#p#4#5.6#I#m#.#6#7#8#9QtQtQtQtQtQt#K#0QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.7.7QtQtQtQtQtQtQtQt.P#CQtQtQtQtQtQtQtQtQt.#.PQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQt.A#AQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.7.7QtQtQtQtQtQtQtQtQt.zQtQtQtQtQtQtQt.zQt.#.8QtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQta.#KQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQta#a#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtaaaaQt.#abQtQtQtQtQtQtQtQt.#QtQtQtQtQtQtQtQtQt.c#9QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.7.7QtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.P#A.7ac#G#5adae#0#Bae#KafQtagQt#C.P.PQtQtQtQtQtad#BQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.z.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.Pahai#t.2.Lajak#Ialamanao.Dagapak.O.zQtQtQtQtQt#A#CQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.P.zQtQtQt.P.N#b.u.0aqarasat.X.k.s#i.1#c#sauae.PQtQtQt.P.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O#0QtQtQt#o#a#s#Rat.0#j.o.Y#u#s.mag.H.q.E.o.N.OQtQtQt#A.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#oa#QtQtQt.Oavaw#r#F.X#6.Laq.0.1.1.G.Y.L.V.p#I.7QtQtQt#LQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#A#oQtQtahax#D#R#s#E.0.Y.n#i.Iaq.u#O#Vav#aay#oQtQtaz#KQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#BaaQtQtaAaB#f#EaC.U.Kag.0.1#iaD.X.F.1#DanaEahQtQtaF.OQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.z.PQtQtaG#J#..W#j.n.o#i.p#2.Haq#N#caD#HaHaIahQtQt.O.PQt.O.PQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.PQtQtQtQtQt#AaJaK.v#i.W#b#R#t.T#l.C.n.XaLaMaN#9azQtQtQtQtQtaO#oQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#C#0#AQtQtQtQt.x#G.Yaq.I#O#H.w.HaK#3aq.1.1.u#E#AQtQtQtQt.z.P.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O#Aa.QtQtQt#oac.F.3.m#i.Z.u#q.1aP#R#6.G.u.H#MaQ.OQtQtQtaz.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.PaR.zQtQtah#Uat.D#V.maD#i.1#j#N.Z#6.v.H.kaS#f#9QtQtQt#0QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.7.c.PQt.P.Aap.val#R.r.Z.2.0.X#c#caL#l#E.M.WaQ#AQtQtQta#.8QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O#0QtQtazaTacaCaU.R.o.H.J.I#r#i.1ag#k#Jaw.F#TaVQtQta##K.AQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O.8#o.z.AaQaWao#IaX#kaq.Z.Z.n#6.I.X#x.taU#raYQt.8.PaO#CaeQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.z#0#o.O.8#TaPas#v.V#M.0#j#iaZ#ia0.m.Hat.tax#2aO.zQt.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtazaaQtQt.ia1a2.F.K#caS#j.GaZ.0#c.J#u.L#Mama3ahQtQta#.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.8QtQta4a5a6a7aC.I#x.C.Ia8#iaq.0#k#X.F.Ma9b.QtQt.7.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtb#ba.M.V.Z#c#V#V.2.n.0.X#c#VaDbbbcaJQtQtQtQtQtQt.A.7QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#oQtQtQtQtQt.P.QbdQt.Xav#.aKa2be#m#.a7#QaLbfQta..zQtQtQtQtQtaF#9QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.7.7QtQtQtQtQtQtQtQtQt.PQtQtQtQtQtQtQtQtQt.##CQtQtQtQtQtQtQtbg.#aFQtQtQtQtQtQtQtQt.c#9QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt#o#oQtQtQtQtQtQtQtQt.Pa#QtQtQtQtQtQtQt#CQt.#aVab#0a..AaR#KadQt.#bhaRQtQtQtQtQtQtQtaO.AQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.P.OQtQtQtQtQt.Oa.a3.W.Z.F#xbibj#Hbka3#P.n#e#waY#B.OQtQtQtQtQt#Ca#QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#Cbg.Ka0.G#j.0.s.H#c#l#J#i.m.o.Y#Pbg.AQtQtQt#oQt.P.PQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.Pa4arao#Y.1#Oaxaqbl.mat.Z#k.5#xbma4aeQtQtQt.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O#g#d.q#t.1.2.o#ca8#Va0aD.o#a#w#r#naaQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtaa.PQtQtbn#h#dawax#u.H#i.2aD#c.0#6.v#h.qawbibnQtQtQt.OaaQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.A.OQtQtaO#Q.Vbi#X.D#iaq.l#V.0aDaD#Yat#.#q#mbhQtQt#B#KaeQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.O.PQtQt.A.U.C#taC#Maq.0.0aL#u#j.I.K#Oa6.L#7aOQtQt#C#o.zQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQta#a##oQtQtaRbi#bau#Faq.I.I.u#j#X#caq.Yas.V#vboaFQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQta#a#QtQtQt#9#a.r.EaCaq.0#i.0#i#s.IaD.u#F.K#F#hbpQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#o.PQtQtaO.4au.Cbb.2.Y#6#i#i#j#6#j.W#q#kaBaK#8QtQt.O.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.PQtQt.8#AaB.q.L#k#N#j.1#Nagbq.v.r#V#v#xbqaIbr.OQt.P.P.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#A#oQtaz#9#l#m#x.r.X#j.1#saq#F#O#c#u.E#rbs.t#9aaQt.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQta.a.Qt#Bb.avbt.k.m#u.0#6aq.I#i#6.2.v#O#FaS.Mb.QtQtaf#oQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtae#BQt#Cafa6.L#x.l#daq#i.I#6#c#i.I.G.3.k.CbuaVQtQt#Laa.PQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt#K.OQtQtaeaw#3#d.u.v#i.I.lag.I.Z.H.Ga0.C#Ubf#9QtQt.A.AQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtadaaQtQtaR.Sbo#s.m.uaq.Y.I.0.IaD#q#O.l#PbkaX#KQtQtaa.AQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.P.8Qtaa.PQtQt#0#2bc.u#j#caqaqaraC.w#i.2#caqaC.U.RahQtQtQtQtQt.8aaQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.z#KQtQtQtQtQt.P.Qbebs.1#Y.q#Y#Sbabv#l.kbw#ebtbxb##oQtQtQtQtQtad#BQtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt.P.PQtQtQtQtQtQtQtQt.P.7QtQtQtQtQtQtQt.PQt.#by.aa..zQt.8#AafQt.##LQtQtQtQtQtQtQtQtaf#9QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQt#o#oQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.#a.QtQtQtQtQtQtQtQt.#.aQtQtQtQtQtQtQtQt.ca.QtQtQtQtQtQtQtQtQtQtQtQtQtQt",
+"QtQtQtQtQtQtQta#a#QtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQtQt.##AQtQtQtQtQtQtQtQt.##CQtQtQtQtQtQtQtQtahadQtQtQtQtQtQtQtQtQtQtQtQtQtQt"};
